# M2R-intern-BULL

./: .edit.txt.swp  Doubts  LayOut-initial.odt  README.md  before-select-consres.odt  code-update  node-spec-17-02-2015
Cluster/: slurm-log-layout-error-success
ClusterDebug/: C - all scenario~  C - salloc -n1 -N1 sleep 50 &  C - salloc -n1 -N1 sleep 50 & ~  C - salloc -n7 -N1  C - salloc -n7 -N1  ~  n5-N1-n6-N1-n5-N2
Code/: select_nodes.txt  warnings-in-slurm
Conf/: Buffe-overflo-slurmctld  Layouts_Interesting_Error_Scenarios.txt  generate-gres-conf.c  generate-node-conf  generate-socket-conf  generate-socket-conf.sh  generate-topo-conf  layout_cons_res_partition-23-03.conf  layout_cons_res_partition-25-03.conf  layout_cons_res_partition-Keywords-25-03  layout_cons_res_partition-Keywords23-03  socket.conf  test
Conf/Experiment-240-virtual-nodes+power/Mine/Node+topology-only-config/cons_res_layout/: Makefile.am  select_cons_res_layout.c
Conf/Experiment-4000-virtual-nodes-paper/Mine/Node-only-config/Node-Level-_allocate_sc_based_code/cons_res_partition/: Makefile.am
Documents/: A Proactive Approach for Coping with Uncertain Resource Availabilities on Desktop Grids (PDF Download Available).html  Book-Energy-Efficient Distributed Computing Systems - Wiley Online Library.html  reference.txt  share-exclusive-values.txt
Fwd__Re__Performance_evaluation_Code_with_Paper/: Wait_time_basic_fine_medium_FS+FSE.R  energy_graph_wattmetre.R
Fwd__Re__Performance_evaluation_Code_with_Paper-fresh/: system_utilization.sh
source-code/layouts/energy/: Makefile.am  default.c
(+3646 files in other folders)
